@@ -1,4 +1,8 @@
 ﻿
+2007-02-18  Roland Clobus <rclobus@bigfoot.com>
+	* server/player.c: Fix for #1473765. Don't recycle player objects when
+	a (re)connect is in progress.
+
 2006-11-18  Roland Clobus <rclobus@bigfoot.com>
 	* client/ai/computer_names: Fixed a typo (present since 2000 :-)
 	
